Styled global styles and added login.module.css

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,14 +6,22 @@
   --gray-color: #272727;
   --greenish-color: #343C13;
   --white-color: #fff;
+
+  --space-s: 12px;
+  --space-m: 24px;
+  --space-l: 48px;
 }
 
 body {
-  background-color: var(--dark-color);
-  color: var(--light-color);
+  background: var(--gray-color);
+  background: linear-gradient(160deg, var(--gray-color), var(--light-color) 100%);
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -32,7 +40,7 @@ button {
   background-color: var(--light-color);
   color: var(--dark-color);
   border: none;
-  padding: 10px 20px;
+  padding: var(--space-s) var(--space-m);
   cursor: pointer;
   border-radius: 5px;
 }
