--- a/src/styles/WeightEntryForm.module.css
+++ b/src/styles/WeightEntryForm.module.css
@@ -2,6 +2,7 @@
 
 .container {
     max-width: 400px;
+    min-width: 80vw;
     margin: 0 auto;
     padding: 20px;
     background-color: var(--gray-color);
@@ -50,3 +51,9 @@
     background-color: #c8e057;
   }
   
+  @media (min-width: 768px) {
+
+    .container {
+        min-width: 600px;
+  }
+}
