--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,8 +20,10 @@ body {
   padding: 0;
   display: flex;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   align-items: center;
+  padding-top: var(--space-l);
+  padding-bottom: var(--space-l);
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -49,4 +51,8 @@ button:hover {
   background-color: #c8e057;
 }
 
-/* Lisää muita yleisiä tyylejä */
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
