--- a/src/styles/WeightList.module.css
+++ b/src/styles/WeightList.module.css
@@ -19,14 +19,14 @@
   
   .entry {
     margin-bottom: var(--space-s);
-    padding: var(--space-m);
+    padding: var(--space-s);
     background-color: var(--dark-color);
     color: var(--light-color);
     border-radius: 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: var(--space-s);
+    gap: 6px;
   }
   
   .entry span {
@@ -37,20 +37,20 @@
   
   .weight {
     font-weight: bold;
-    font-size: 24px;
+    font-size: 18px;
     color: var(--white-color);
-    margin-bottom: var(--space-m);
+    margin-bottom: var(--space-s);
   }
   
   .entry-actions {
     display: flex;
     justify-content: center;
-    gap: var(--space-m);
+    gap: var(--space-s);
   }
   
   .entry-actions button {
     padding: 6px var(--space-s);
-    font-size: 16px;
+    font-size: 12px;
   }
   
   .edit-input {
