Added background-attachment: fixed;

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,7 @@
 body {
   background: var(--gray-color);
   background: linear-gradient(160deg, var(--gray-color), var(--light-color) 100%);
+  background-attachment: fixed;
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
