--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -5,7 +5,6 @@
     min-width: 300px;
     margin: 0 auto;
     padding: 20px;
-    background-color: var(--gray-color);
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     height: 50vh;
@@ -13,6 +12,9 @@
     flex-direction: column;
     position: relative;
     overflow: hidden;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    background-color: rgba(20, 20, 20, .8);
 }
   
 .title {
