--- a/src/styles/WeightEntryForm.module.css
+++ b/src/styles/WeightEntryForm.module.css
@@ -8,6 +8,9 @@
     background-color: var(--gray-color);
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    background-color: rgba(20, 20, 20, .8);
   }
   
   .title {
